welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: '{' expected but 'case' found.
  	case litMessage() == "R" => droite(); avance ();
        ^BDR2:5: error: '}' expected but 'case' found.
  	case litMessage() == "L" => gauche(); avance();
        ^BDR2:6: error: '}' expected but 'case' found.
  	case litMessage() == "I" => retourne(); avance();
        ^BDR2:7: error: illegal start of definition
  	case litMessage() == "A" => avance();
        ^BDR2:8: error: illegal start of definition
  	case litMessage() == "B" => avance(); avance();
        ^BDR2:9: error: illegal start of definition
  	case litMessage() == "C" => avance(); avance(); avance();
        ^BDR2:10: error: illegal start of definition
  	case litMessage() == "D" => avance(); avance(); avance(); avance();	
        ^BDR2:11: error: illegal start of definition
    case litMessage() == "E" => avance(); avance(); avance(); avance(); avance();
    ^BDR2:12: error: illegal start of definition
	  case litMessage() == "F" => avance(); avance(); avance(); avance(); avance(); avance();
          ^BDR2:13: error: illegal start of definition
  	case litMessage() == "Z" => recule();
        ^BDR2:14: error: illegal start of definition
  	case litMessage() == "Y" => recule(); recule();
        ^BDR2:15: error: illegal start of definition
  	case litMessage() == "X" => recule(); recule(); recule(); 
        ^BDR2:16: error: illegal start of definition
  	case litMessage() == "W" => recule(); recule(); recule(); recule(); 
        ^BDR2:17: error: illegal start of definition
  	case litMessage() == "V" => recule(); recule(); recule(); recule(); recule(); 
        ^BDR2:18: error: illegal start of definition
  	case litMessage() == "U" => recule(); recule(); recule(); recule(); recule(); recule(); 
        ^BDR2:19: error: illegal start of definition
  	case _                   => fini = 1
        ^BDR2:23: error: eof expected but '}' found.
	}
        ^